--- a/PackingUp/Info.plist
+++ b/PackingUp/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>MGLMapboxAccessToken</key>
+	<string>pk.eyJ1IjoiYW5ldHNjaCIsImEiOiJjaWoyenJzdXEwMDB0dmdtMmp2Y3FuYnh3In0.eoe7KP0dFbzNp5aiQQjgOA</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
